# tienda-calzados-marilo

./: .env.development.example  .env.production.example  .gitignore  .pre-commit-config.yaml  DEV-DEPLOYMENT.md  README.md  docker-compose.yml  manage.py  pyproject.toml  wsgi_init.py
accounts/: forms.py  tests.py  urls.py  views.py
carrito/: admin.py  forms.py  models.py  serializers.py  tests.py  tests_advanced.py  urls.py  views.py
carrito/migrations/: 0001_initial.py  0002_alter_zapatocarrito_zapato.py
catalog/: admin.py  apps.py  forms.py  models.py  seeders.py  serializers.py  tests.py  urls.py  views.py
catalog/css/: styles.css
catalog/migrations/: 0002_alter_categoria_id_alter_imagenzapato_id_and_more.py  0003_alter_categoria_imagen_alter_imagenzapato_imagen_and_more.py  0004_zapato_imagen_delete_imagenzapato.py  0005_alter_zapato_precio_alter_zapato_preciooferta.py  0006_make_zapato_precio_precio_oferta_decimal.py  001.py
customer/: admin.py  models.py  seeders.py  tests.py
customer/migrations/: 0001_initial.py
docs/: Modelo Conceptual.drawio
management/: apps.py  forms.py  seeders.py  tests.py  urls.py  views.py
orders/: apps.py  emails.py  forms.py  models.py  seeders.py  tests.py  tests_advanced.py  tests_stripe_edge_cases.py  tests_stripe_race_conditions.py  tests_stripe_return_and_failures.py  tests_stripe_webhooks.py  urls.py  utils.py  views.py
orders/migrations/: 0001_initial.py  0002_add_descuento_field.py  (+2 more)
templates/: base.html  home.html
tienda_calzados_marilo/: asgi.py  env.py  settings.py  urls.py  wsgi.py
(+60 files in other folders)
