[project]
name = "tienda-calzados-marilo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "django>=5.2.7",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "autoflake>=2.3.1",
    "flake8>=7.3.0",
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.flake8]
extend-ignore = ["E203", "W503", "E501"]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "flake8-pyproject>=1.2.3",
    "pre-commit>=4.3.0",
]
